# ksef-link

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: DEVELOP.md
src/ksef_link/: __main__.py  auth.py  bootstrap.py  cli.py  config.py  http.py  invoices.py  main.py  models.py  workflows.py
src/ksef_link/adapters/cli/: __init__.py  parser.py
src/ksef_link/adapters/filesystem/: __init__.py  invoice_storage.py
src/ksef_link/adapters/ksef_api/: __init__.py  auth_gateway.py  auth_support.py  http_client.py  invoice_gateway.py  models.py  (+1 more)
src/ksef_link/application/: __init__.py  auth_handlers.py  commands.py  context.py  dispatcher.py  invoice_handlers.py  invoice_serializers.py
src/ksef_link/domain/: __init__.py  auth.py  invoices.py
src/ksef_link/ports/: __init__.py  auth.py  invoices.py  storage.py
src/ksef_link/shared/: __init__.py  errors.py  logging.py  settings.py
tests/: test_auth.py  test_bootstrap.py  test_cli.py  test_config.py  test_http.py  test_invoices.py  test_main.py  test_models.py  test_package_main.py  test_public_api.py  test_workflows.py
tests/adapters/cli/: test_parser.py
tests/adapters/filesystem/: test_invoice_storage.py
tests/adapters/ksef_api/: test_auth_gateway.py  test_auth_support.py  test_http_client.py  test_invoice_gateway.py  test_models.py  test_pagination.py
tests/application/: test_auth_handlers.py  test_commands.py  test_dispatcher.py  test_invoice_handlers.py  test_invoice_serializers.py
tests/domain/: test_auth.py  test_invoices.py
tests/shared/: test_errors.py  test_logging.py  test_settings.py
